applications/cilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-http-route
  namespace: cilium
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: http-listener
  hostnames:
    - hubble.promotesudbury.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
